# competence

./: .gitignore  Cargo.toml  README.md  Trunk.toml  example.json  index.html
.github/workflows/: rust.yml
js/: chart.js
src/: _colors.scss  app.scss  bindings.rs  export.rs  graph.rs  local_storage.rs  main.rs  routes.rs  store.rs
src/common/: mod.rs  rating.rs
src/competency/: area_list.rs  competency_list.rs  discipline_list.rs  mod.rs  path_list.rs  save_area.rs
src/components/: area_list.rs  competencies.rs  competency_list.rs  csv.rs  discipline_list.rs  home.rs  mod.rs  path_list.rs  rating_select.rs  save_area.rs
src/models/: mod.rs
