[package]
name = "competency"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-console = "0.2.1"
gloo-storage = "0.2.1"
gloo-utils = "0.1.4"
js-sys = "0.3.57"
reqwasm = "0.5.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.67"
serde-wasm-bindgen = "0.5"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.61", features = [
  "Navigator",
  "Window",
  "Clipboard",
] }
wee_alloc = "0.4.5"
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
yewdux = { git = "https://github.com/intendednull/yewdux.git" }

[dependencies.uuid]
version = "1"
features = ["v4", "js"]

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
